# tarui-security

./: .gitignore  README.md  package-lock.json  package.json
.github/: copilot-instructions.md
src/: App.vue  SimpleApp.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AutoFileReader.vue
src/composables/: useFileReader.js  useMaliciousApp.js  useNetworkClient.js
