[package]
name = "my-tauri-demo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "security_tool"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { version = "2.5.2", default-features = false, features = ["rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }

# 优化配置
[profile.release]
opt-level = "s"        # 优化体积而非速度
lto = true            # 链接时优化
codegen-units = 1     # 减少代码生成单元
panic = "abort"       # 减少panic处理代码
strip = true          # 移除调试符号

